src/objects/Revenue_Recognition_Rule__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Old Id from KVH System</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Manual_Schedule_Date__c</fullName>
        <label>First Manual Schedule Date</label>
        <summarizedField>Revenue_Recognition_Schedule__c.Schedule_Date__c</summarizedField>
        <summaryForeignKey>Revenue_Recognition_Schedule__c.Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Manual_Schedule_Month__c</fullName>
        <label>First Manual Schedule Month #</label>
        <summarizedField>Revenue_Recognition_Schedule__c.Month__c</summarizedField>
        <summaryForeignKey>Revenue_Recognition_Schedule__c.Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Manual_Schedules__c</fullName>
        <label>No of Manual Schedules</label>
        <summaryForeignKey>Revenue_Recognition_Schedule__c.Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recognition_Date__c</fullName>
        <label>Recognition Date</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Recognition_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Service Activation Date</fullName>
                    <default>true</default>
                    <label>Service Activation Date</label>
                </value>
                <value>
                    <fullName>Service End Date</fullName>
                </value>
                <value>
                    <fullName>Revenue Recognition Date</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recognition_Type__c</fullName>
        <label>Recognition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Recognition Over Time</fullName>
                </value>
                <value>
                    <fullName>Full Recognition on Specific Date</fullName>
                </value>
                <value>
                    <fullName>Manual Recognition</fullName>
                </value>
                <value>
                    <fullName>Monthly Recognition Over Time</fullName>
                </value>
                <value>
                    <fullName>Weighted Monthly Recognition Over Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Schedule_Total__c</fullName>
        <label>Revenue Recognition Schedule - Total %</label>
        <summarizedField>Revenue_Recognition_Schedule__c.Revenue_Percent__c</summarizedField>
        <summaryForeignKey>Revenue_Recognition_Schedule__c.Revenue_Recognition_Rule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Revenue Recognition Rule</label>
    <nameField>
        <label>Revenue Recognition Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Recognition Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>